RSS: make sure thumbnail images don't overflow their container in calico templates

--- a/resources/gato-template-mobilefirst/css/_contenttype_tweaks.scss
+++ b/resources/gato-template-mobilefirst/css/_contenttype_tweaks.scss
@@ -231,7 +231,7 @@ h2.event-list-title {
 }
 
 //rss
-.gato-rss-item.gato-accordion {
+.gato-rss-item {
   .gato-accordion-header {
     font-family: $halis;
     text-transform: uppercase;
